# carakube

./: .env.example  .gitignore  .gitlab-ci.yml  .prettierrc.json  CLUSTER_VISUALIZATION_PLAN.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.sh  main.yaml
frontend/: .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/.husky/: pre-commit
frontend/e2e/: api-integration.spec.ts  demo-page.spec.ts  landing-page.spec.ts
frontend/public/: install.yaml
frontend/src/app/: globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/demo/: page.module.css  page.tsx
frontend/src/components/: ConditionalSidebar.tsx  LayoutWrapper.tsx
frontend/src/components/Banner/: Banner.module.css  Banner.tsx
frontend/src/components/FlowingTreeGraph/: FlowingTreeGraph.module.css  FlowingTreeGraph.tsx  index.ts
frontend/src/components/GraphNode/: GraphNode.module.css  GraphNode.tsx  index.ts
frontend/src/components/IncidentReportCard/: IncidentReportCard.module.css  (+2 more)
frontend/src/context/: SelectedNodeContext.tsx
frontend/src/lib/: animation.ts  api.ts  apischema.ts
frontend/src/store/: graph.ts  incidents.ts  vulnerabilityStates.ts
frontend/src/types/: index.ts
kubernetes/: Dockerfile  flux-reconcile.sh  kind-config.yaml  start-cluster.sh
operator/: .coverage  .dockerignore  CLUSTER_VISUALIZATION_TECHNICAL.md  Dockerfile  README.md  SCANNER_IMPLEMENTATION.md  main.py  pyproject.toml  pytest.ini  supervisord.conf  vulnerability_state.py
operator/autofix/: __init__.py  git_operations.py
operator/scanner/: README.md  __init__.py  cluster_scanner.py  daemon.py  graph_builder.py
operator/tests/: test_scanner.py
scripts/: makefile-completion.sh  quick-test.sh  test-new-scans.py
src/app/: globals.css  layout.module.css  page.tsx
traefik/: traefik.yml
(+25 files in other folders)
