[project]
name = "carakube-operator"
version = "0.1.0"
description = "Kubernetes operator for Carakube"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Carakube Team" }
]
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.uv]
managed = true
