[project]
name = "carakube-operator"
version = "0.1.0"
description = "Kubernetes operator for Carakube with advanced security scanning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Carakube Team" }
]
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "kubernetes>=30.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "isort>=5.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.uv]
managed = true
