[project]
name = "carakube-operator"
version = "0.1.0"
description = "Kubernetes operator for Carakube with advanced security scanning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Carakube Team" }
]
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "kubernetes>=30.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "isort>=5.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
    "vulture>=2.14",
]
